Add Console API to list and query registered Storage Indices. (#2532)
Ensure index queries respect storage permissions if the caller is not the nil uuid.
