# server/storage_index.go
@@ -16,6 +16,7 @@ package server
 
 import (
 	"bytes"
+	"cmp"
 	"context"
 	"database/sql"
 	"encoding/base64"
@@ -36,6 +37,11 @@ import (
 	"google.golang.org/protobuf/types/known/wrapperspb"
 )
 
+var (
+	ErrNotFound = errors.New("not found")
+	ErrBadInput = errors.New("invalid")
+)
+
 type StorageIndex interface {
 	Write(ctx context.Context, objects []*api.StorageObject) (creates int, deletes int)
 	Delete(ctx context.Context, objects StorageOpDeletes) (deletes int)
@@ -43,6 +49,17 @@ type StorageIndex interface {
 	Load(ctx context.Context) error
 	CreateIndex(ctx context.Context, name, collection, key string, fields []string, sortFields []string, maxEntries int, indexOnly bool) error
 	RegisterFilters(runtime *Runtime)
+	GetIndexes() []StorageIndexConfig
+}
+
+type StorageIndexConfig struct {
+	Name           string
+	MaxEntries     int
+	Collection     string
+	Key            string
+	Fields         []string
+	SortableFields []string
+	IndexOnly      bool
 }
 
 type storageIndex struct {
@@ -237,7 +254,7 @@ type indexListCursor struct {
 func (si *LocalStorageIndex) List(ctx context.Context, callerID uuid.UUID, indexName, query string, limit int, order []string, cursor string) (*api.StorageObjects, string, error) {
 	idx, found := si.indexByName[indexName]
 	if !found {
-		return nil, "", fmt.Errorf("index %q not found", indexName)
+		return nil, "", fmt.Errorf("index %q: %w", indexName, ErrNotFound)
 	}
 
 	if limit > idx.MaxEntries {
@@ -253,28 +270,55 @@ func (si *LocalStorageIndex) List(ctx context.Context, callerID uuid.UUID, index
 		idxCursor = &indexListCursor{}
 		cb, err := base64.RawURLEncoding.DecodeString(cursor)
 		if err != nil {
-			si.logger.Error("Could not base64 decode notification cursor.", zap.String("cursor", cursor))
-			return nil, "", errors.New("invalid cursor")
+			si.logger.Error("Could not base64 decode cursor.", zap.String("cursor", cursor))
+			return nil, "", fmt.Errorf("%w cursor: %w", ErrBadInput, err)
 		}
 		if err := gob.NewDecoder(bytes.NewReader(cb)).Decode(idxCursor); err != nil {
-			si.logger.Error("Could not decode notification cursor.", zap.String("cursor", cursor))
-			return nil, "", errors.New("invalid cursor")
+			si.logger.Error("Could not decode cursor.", zap.String("cursor", cursor))
+			return nil, "", fmt.Errorf("%w cursor: %w", ErrBadInput, err)
 		}
 
 		if query != idxCursor.Query {
-			return nil, "", fmt.Errorf("invalid cursor: query mismatch")
+			return nil, "", fmt.Errorf("%w cursor: query mismatch", ErrBadInput)
 		}
 		if limit != idxCursor.Limit {
-			return nil, "", fmt.Errorf("invalid cursor: limit mismatch")
+			return nil, "", fmt.Errorf("%w cursor: limit mismatch", ErrBadInput)
 		}
 		if !slices.Equal(order, idxCursor.Order) {
-			return nil, "", fmt.Errorf("invalid cursor: order mismatch")
+			return nil, "", fmt.Errorf("%w cursor: order mismatch", ErrBadInput)
 		}
 	}
 
 	parsedQuery, err := ParseQueryString(query)
 	if err != nil {
-		return nil, "", err
+		return nil, "", fmt.Errorf("failed to parse query string: %s: %w", err.Error(), ErrBadInput)
+	}
+
+	if callerID != uuid.Nil {
+		// Logically the query is:
+		// QUERY AND (read:2 OR (read:1 AND owner:user_id))
+		//
+		// But expressed in Bluge terms as:
+		// QUERY AND (NOT read:0) AND (NOT (read:1 AND NOT owner:user_id))
+
+		noRead := bluge.NewNumericRangeInclusiveQuery(0, 0, true, true)
+		noRead.SetField("read")
+
+		ownerRead := bluge.NewNumericRangeInclusiveQuery(1, 1, true, true)
+		ownerRead.SetField("read")
+		owner := bluge.NewTermQuery(callerID.String())
+		owner.SetField("user_id")
+
+		noOtherOwnerRead := bluge.NewBooleanQuery()
+		noOtherOwnerRead.AddMust(ownerRead)
+		noOtherOwnerRead.AddMustNot(owner)
+
+		callerAwareQuery := bluge.NewBooleanQuery()
+		callerAwareQuery.AddMust(parsedQuery)
+		callerAwareQuery.AddMustNot(noRead)
+		callerAwareQuery.AddMustNot(noOtherOwnerRead)
+
+		parsedQuery = callerAwareQuery
 	}
 
 	searchReq := bluge.NewTopNSearch(limit+1, parsedQuery)
@@ -291,7 +335,6 @@ func (si *LocalStorageIndex) List(ctx context.Context, callerID uuid.UUID, index
 	if err != nil {
 		return nil, "", err
 	}
-
 	defer func() {
 		if err = indexReader.Close(); err != nil {
 			si.logger.Error("error closing index reader", zap.Error(err))
@@ -370,6 +413,10 @@ func (si *LocalStorageIndex) List(ctx context.Context, callerID uuid.UUID, index
 		return nil, "", err
 	}
 
+	if len(objects.Objects) == 0 {
+		return &api.StorageObjects{Objects: []*api.StorageObject{}}, "", nil
+	}
+
 	// Sort the objects read from the db according to the results from the index as StorageReadObjects does not guarantee ordering of the results
 	objectIdToIdx := make(map[string]int, len(objects.Objects))
 	for i, o := range objects.Objects {
@@ -394,13 +441,13 @@ func (si *LocalStorageIndex) List(ctx context.Context, callerID uuid.UUID, index
 		// Reindex potentially stale indexed objects.
 		si.Write(ctx, staleIndexedObjects)
 	}
+
 	objects.Objects = sortedObjects
 
 	return objects, newCursor, nil
 }
 
 func (si *LocalStorageIndex) Load(ctx context.Context) error {
-	var rangeError error
 	for _, idx := range si.indexByName {
 		t := time.Now()
 		if err := si.load(ctx, idx); err != nil {
@@ -411,7 +458,7 @@ func (si *LocalStorageIndex) Load(ctx context.Context) error {
 		si.logger.Info("Storage index loaded.", zap.Any("config", idx), zap.Int64("elapsed_time_ms", elapsedTimeMs))
 	}
 
-	return rangeError
+	return nil
 }
 
 func (si *LocalStorageIndex) load(ctx context.Context, idx *storageIndex) error {
@@ -708,21 +755,16 @@ func (si *LocalStorageIndex) CreateIndex(ctx context.Context, name, collection, 
 		IndexOnly:      indexOnly,
 	}
 	si.indexByName[name] = storageIdx
-
 	if indices, ok := si.indicesByCollection[collection]; ok {
 		si.indicesByCollection[collection] = append(indices, storageIdx)
 	} else {
 		si.indicesByCollection[collection] = []*storageIndex{storageIdx}
 	}
 
-	cfgKey := key
-	if key == "" {
-		cfgKey = "*"
-	}
 	si.logger.Info("Initialized storage engine index", zap.Any("configuration", map[string]any{
 		"name":        name,
 		"collection":  collection,
-		"key":         cfgKey,
+		"key":         key,
 		"fields":      fields,
 		"max_entries": maxEntries,
 		"index_only":  indexOnly,
@@ -740,8 +782,29 @@ func (si *LocalStorageIndex) RegisterFilters(runtime *Runtime) {
 	}
 }
 
+func (si *LocalStorageIndex) GetIndexes() []StorageIndexConfig {
+	storageIndices := make([]StorageIndexConfig, 0, len(si.indexByName))
+	for _, i := range si.indexByName {
+		storageIndices = append(storageIndices, StorageIndexConfig{
+			Name:           i.Name,
+			MaxEntries:     i.MaxEntries,
+			Collection:     i.Collection,
+			Key:            i.Key,
+			Fields:         slices.Clone(i.Fields),
+			SortableFields: slices.Clone(i.SortableFields),
+			IndexOnly:      i.IndexOnly,
+		})
+	}
+
+	slices.SortFunc(storageIndices, func(a, b StorageIndexConfig) int {
+		return cmp.Compare(a.Name, b.Name)
+	})
+
+	return storageIndices
+}
+
 func (si *LocalStorageIndex) storageIndexDocumentId(collection, key, userID string) bluge.Identifier {
-	id := fmt.Sprintf("%s.%s.%s", collection, key, userID)
+	id := collection + "." + key + "." + userID
 
 	return bluge.Identifier(id)
 }
